  * sync --content: Fix bug that caused transfers of files to be made 
    to a git remote that does not have a UUID. This particularly impacted
    clones from gcrypt repositories.
  * Pass -S to git commit-tree when commit.gpgsign is set and when
    making a non-automatic commit, in order to preserve current behavior
    when used with git 1.9, which has stopped doing this itself.

 -- Joey Hess <id@joeyh.name>  Fri, 27 May 2016 13:12:48 -0400

git-annex (6.20160527) unstable; urgency=medium

  * Split lines in the git-annex branch on \r as well as \n, to deal
    with \r\n terminated lines written by some versions of git-annex on
    Windows. This fixes strange displays in some cases.
  * assistant: Fix bug that caused v6 pointer files to be annexed by the
    assistant.
  * assistant: Fix race in v6 mode that caused downloaded file content to
    sometimes not replace pointer files.
  * add: Adding a v6 pointer file used to annex it; now the pointer file is
    added to git as-is. (git add of a pointer file already did the right
    thing)
  * enableremote: Can now be used to explicitly enable git-annex to use
    git remotes. Using the command this way prevents other git-annex
    commands from probing new git remotes to auto-enable them.
  * enableremote: Remove annex-ignore configuration from a remote.
  * Change git annex info remote encryption description to use wording
    closer to what's used in initremote.
  * Pass the various gnupg-options configs to gpg in several cases where
    they were not before. Most notably, gnupg-decrypt-options is now
    passed when decrypting an encrypted cipher.
  * adjust: Add --fix adjustment, which is useful when the git directory
    is in a nonstandard place.
  * adjust: If the adjusted branch already exists, avoid overwriting it,
    since it might contain changes that have not yet been propigated to the
    original branch.
  * Work around git weirdness in handling of relative path to GIT_INDEX_FILE